dfir_rs/tests/compile-fail-stable/surface_degenerate_null.rs
../compile-fail/surface_degenerate_null.rs